src/objects/c2g__DataViewJoin__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__Dataview__c</fullName>
        <label>Dataview</label>
        <referenceTo>c2g__DataView__c</referenceTo>
        <relationshipLabel>DataView Joins</relationshipLabel>
        <relationshipName>DataViewJoins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Depth__c</fullName>
        <label>Depth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Expanded__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Expanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Index__c</fullName>
        <label>Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ParentName__c</fullName>
        <label>Parent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RelationshipName__c</fullName>
        <label>Relationship Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>zDeprecated:DataView Joins</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataView Joins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>